lib/nails_derive/tests/ui/from-request-missing-query-attr.rs
use nails_derive::FromRequest;

#[derive(FromRequest)]
#[nails(path = "/api/posts/{id}")]
pub struct GetPostRequest {
    query1: String,
}

fn main() {}
